--- a/package.json
+++ b/package.json
@@ -12,16 +12,15 @@
     "chatgpt": "^5.0.8",
     "dotenv": "^16.0.3",
     "lodash": "^4.17.21",
-    "marked": "^4.2.12",
     "moment": "^2.29.4",
     "node-persist": "^3.1.3",
     "telegraf": "^4.11.2",
+    "telegramify-markdown": "^1.0.6",
     "winston": "^3.8.2"
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.3",
     "@types/lodash": "^4.14.191",
-    "@types/marked": "^4.0.8",
     "@types/node": "^18.14.2",
     "@types/node-persist": "^3.1.3",
     "tsx": "^3.12.3",
